# tea-style

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: examples-and-diagrams-standard.md  page-template-standard.md  repo-scope.md  repository-layout.md  second-brain-markdown-standard.md  work-operating-model.md
docs/decisions/: 0001-adopt-github-native-second-brain-doctrine.md  0002-adopt-markdown-native-doctrine-graph.md  0003-ship-tea-kb-lifecycle-tooling.md  README.md
docs/diagrams/: diagramming-standards.md
docs/doctrines/: README.md  engineering-control-spine.md  systems-should-tell-on-themselves.md  tea-style-doctrine.md  typed-encapsulated-architecture-style.md
docs/maps/: agent-architecture.md  automation.md  coding.md  engineering-doctrine.md  observability.md
docs/standards/: agent-kb-editing-standard.md  generated-artifact-standard.md  graph-knowledge-base-standard.md  graph-linking-standard.md  python-type-discipline.md  visualization-standard.md
docs/writing/: technical-writing-standards.md
domains/agent_arch/: README.md  principles.md
domains/automation/: README.md  anti-patterns.md  change-management.md  configuration-management.md  incident-management.md  patterns.md  principles.md  safe-workflow-design.md  salt.md  standards.md  terraform.md
domains/coding/: README.md  anti-patterns.md  architecture-boundaries.md  patterns.md  principles.md  standards.md  tooling.md
domains/observability/: README.md  anti-patterns.md  capacity-and-reliability.md  diagnostic-workflows.md  (+4 more)
graph/: schema.md
(+128 files in other folders)
