[project]
name = "tea-style-kb"
version = "0.1.0"
description = "Markdown-native lifecycle tooling for the TEA doctrine graph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "markdown-it-py>=3.0.0",
  "networkx>=3.0",
  "pydantic>=2",
  "python-frontmatter>=1.0.0",
  "pyvis>=0.3.2",
  "rich>=13.0.0",
  "typer>=0.12.0",
]

[project.scripts]
tea-kb = "tea_kb.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tea_kb"]

[dependency-groups]
dev = [
  "pyright>=1.1.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/tea_kb/cli/app.py" = ["B008"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
